kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angie-deployment
  namespace: homework
  labels:
    app: angie
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: angie

  template:
    metadata:
      labels:
        app: angie
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1
      containers:
      - name: nginx-fork
        image: docker.angie.software/angie:1.11.6-minimal
        ports:
        - containerPort: 8000
        volumeMounts:

        - name: shared-index-html
          mountPath: /homework

        - name: angie-config
          mountPath: /etc/angie/http.d/default.conf
          subPath: default.conf

        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - "rm -f /homework/index.html && sleep 5"

        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3


      volumes:
      - name: shared-index-html
        emptyDir: {}

      - name: angie-config
        configMap:
          name: angie-config
