kubernetes-networks/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homework-gateway
  namespace: homework
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: homework.otus
      allowedRoutes:
        namespaces:
          from: All
