kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework
spec:
  parentRefs:
    - name: homework-gateway
      namespace: homework
  hostnames:
    - homework.otus
  rules:
    # Правило для /homepage — полная замена пути на /index.html
    - matches:
        - path:
            type: Exact
            value: /homepage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: angie-service
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: angie-service
          port: 8000
